# hyprsession

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  hyprsession  hyprsession.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: publish.yml
data/: config.yaml
docs/: COMMAND_DETECTION.md
src/: command_detection.rs  command_faker.rs  config.rs  legacy.rs  lib.rs  main.rs  session.rs
tests/: README.md  doc_tests.rs  integration_tests.rs  performance_tests.rs  test-aur.sh  unit_tests.rs
tests/vm-test/: .gitignore  exec.conf  flake.nix  home.nix  run-test.sh  test-config.toml
