[package]
name = "hyprsession"
version = "0.1.3"
edition = "2021"
authors = [ "Josh Andrews" ]
license = "GPL-3.0"
description = "Saves hyprland sessions"
readme = "README.md"
repository = "https://github.com/joshurtree/hyprsession"
keywords = [ "hyprland", "session", "tools" ]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
hyprland = "0.4.0-alpha.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
